--- a/main.css
+++ b/main.css
@@ -49,6 +49,7 @@ body{
     width:200px;
     height: 200px;
     border-radius: 10px;
+    object-fit:contain;
    position: absolute;
    backface-visibility: hidden;
 }
@@ -101,6 +102,30 @@ body{
     transform: rotateY(180deg);
     height: 100%;
     width: 100%;
-    object-fit:contain;
 padding: 1rem;
+}
+@media screen and (max-width:400px) {
+    .boxs{
+        grid-template-columns:200% 200% 200% ;
+        grid-template-rows: 140px 140px 140px 140px;
+        column-gap: 140%;
+        margin-left: -14.5rem;
+    }
+    .box{
+        padding: 5px;
+    }
+    
+    .front-img,.back-img{
+        background: rgb(31,202,202);
+        background: linear-gradient(180deg, rgba(31,202,202,1) 12%, rgba(70,64,51,1) 100%);
+        width:25vw;
+        height: 100%;
+        
+        border-radius: 10px;
+       position: absolute;
+       backface-visibility: hidden;
+    }
+    body{
+        background-size: 200vh;
+    }
 }
